Update title and meta tags in store.html for improved SEO and branding

--- a/store.html
+++ b/store.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ameero Ka Store 🤑</title>
+  <title>Ameero Ka Store - Official Game 🤑</title>
+  <meta name="description" content="Welcome to Ameero Ka Store! Buy crazy items, become rich, and show off.">
+  <meta property="og:title" content="Ameero Ka Store 👑">
+  <meta property="og:description" content="Hai dum toh kharid ke dikhao! Play now.">
   <link rel="icon" href="GAME LOGO.jpeg" type="image/jpeg">
   <link rel="manifest" href="manifest.json">
   <style>
